--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.15",
-    "@angular/common": "7.2.15",
-    "@angular/compiler": "7.2.15",
-    "@angular/core": "7.2.15",
-    "@angular/forms": "7.2.15",
-    "@angular/http": "7.2.15",
-    "@angular/platform-browser": "7.2.15",
-    "@angular/platform-browser-dynamic": "7.2.15",
-    "@angular/router": "7.2.15",
-    "@angular/service-worker": "7.2.15",
+    "@angular/animations": "8.2.14",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
+    "@angular/service-worker": "8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/store": "^7.4.0",
@@ -30,22 +29,25 @@
     "angulartics2": "^6.3.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.10",
-    "rxjs": "^6.5.3",
+    "ngx-filesaver": "^8.1.0",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "7.3.9",
-    "@angular/compiler-cli": "7.2.15",
-    "@angular/language-service": "7.2.15",
+    "@angular-devkit/build-angular": "~0.803.23",
+    "@angular/cli": "8.3.23",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@types/faker": "^4.1.7",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^6.14.9",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "coveralls": "^3.0.9",
     "faker": "^4.1.0",
+    "file-saver": "^2.0.2",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.4.1",
@@ -56,7 +58,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "3.2.4",
+    "typescript": "3.5.3",
     "watch": "^1.0.2",
     "webdriver-manager": "^12.1.7"
   }
